--- a/project/assets/css/AssistantInfo.css
+++ b/project/assets/css/AssistantInfo.css
@@ -1,12 +1,20 @@
 body{
     margin: 0;
-    background-color: bisque;
-    padding: 25%;
-};
+    padding: 20%;
+}
+
+ul {
+  list-style-type: none;
+}
+
+.wrapper{
+    justify-content: center;
+}
 
 .container{
-    justify-self: start;
-    justify-content: center;
-    border-radius: 5px;
-    background-color: aqua;
+    border: 5px solid ;
+    border-radius: 50px;
+    text-align: center;
+    background-color: #9b7ccc;
+    color: white;
 }
